[perma] comm/mail/components/addrbook/test/browser/browser_edit_photo.js | Uncaught exception in test bound test_local - waiting for photo dialog to change state - timed out after 50 tries
Categories
(Core :: DOM: Core & HTML, defect, P5)
Tracking
()
| Tracking | Status | |
|---|---|---|
| thunderbird_esr128 | --- | unaffected |
| firefox-esr128 | --- | unaffected |
| firefox138 | --- | unaffected |
| firefox139 | --- | unaffected |
| firefox140 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: keithamus)
References
(Regression)
Details
(Keywords: intermittent-failure, intermittent-testcase, regression)
Attachments
(1 file, 1 obsolete file)
Filed by: mkmelin [at] iki.fi
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=506447493&repo=comm-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/CkFInKs7QUeNS4PAuAFzeQ/runs/0/artifacts/public/logs/live_backing.log
Updated•1 year ago
|
Comment 1•1 year ago
|
||
Comment 2•1 year ago
|
||
"Person with photo" is not showing the photo. https://firefoxci.taskcluster-artifacts.net/bySyTrK1SAWuvSP0ML30DQ/0/public/test_info/mozilla-test-fail-screenshot_7ii3oepx.png
Comment 3•1 year ago
|
||
Definitely something from m-c that broke it.
Comment 4•1 year ago
•
|
||
Based on how it's failing I wouldn't be surprised if it's bug 1963446 or possibly bug 1936940
Comment 5•1 year ago
|
||
I think what's changed is that escape is canceling the contact editing instead of just closing the contact photo dialog?
Comment 6•1 year ago
|
||
Confirmed, it's bug 1936940 that changes how the escape keypress propagates, leading to use closing the edit form, which breaks the test.
Comment 7•1 year ago
|
||
Thanks! Martin, are you looking at fixing it?
If not, Alex can you take a look?
Comment 8•1 year ago
|
||
I'm not sure if this is something we should fix or if it's an unintended regression from bug 1936940. I haven't looked into what the expected behavior is though.
Comment 9•1 year ago
|
||
Esc handling for the address book form is at https://searchfox.org/comm-central/rev/7cf8218b74a7799d6f8e8b322ddccb52afda1b06/mail/components/addrbook/content/aboutAddressBook.js#2580
| Comment hidden (Intermittent Failures Robot) |
Comment 11•1 year ago
|
||
I would have thought we could work around it by adding closedby="none" to the dialog. But even with that, Esc will close the dialog. Is that expected?
| Assignee | ||
Comment 12•1 year ago
|
||
You’ll need the flag enabled for that to work. If the flag is not enabled and behaviour has changed this may be a regression. I’ll investigate further.
| Assignee | ||
Updated•1 year ago
|
Comment 13•1 year ago
•
|
||
Right dom.dialog.light-dismiss.enabled is not enabled yet.
What seems to have changed is that earlier Esc would close the dialog, and that would be it - no Esc keypress event seen. But now we see one.
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 15•1 year ago
|
||
| Assignee | ||
Comment 16•1 year ago
|
||
Updated•1 year ago
|
| Comment hidden (Intermittent Failures Robot) |
Updated•1 year ago
|
Comment 18•1 year ago
|
||
Set release status flags based on info from the regressing bug 1936940
Comment 19•1 year ago
|
||
Comment 20•1 year ago
|
||
| bugherder | ||
Comment 21•1 year ago
|
||
This fixed this failure. But unfortunately the failure is back after just a day - probably from bug 1965052. Filed bug 1965654
| Comment hidden (Intermittent Failures Robot) |
Description
•