Bug 1964029 - Close dialogs on escape after a tick r=dom-core,edgar

In D235504 this code was changed from using QueueCancelDialog to using
RequestClose, for consistency. However it seems some code _may_ depend
on the close being run after a tick, so to avoid regressions, this has
been changed to use QueueCancelDialog if the feature-flag is off,
restoring the old behaviour.

Differential Revision: https://phabricator.services.mozilla.com/D247886